--- a/posts/2024-03-31-data-viz-course/index.qmd
+++ b/posts/2024-03-31-data-viz-course/index.qmd
@@ -15,7 +15,7 @@ draft: true
 ---
 
 ::: {.center-text}
-*I had initially intended for this to be a short, high-level reflection of what it was like to build and teach a new (to me) grad-level course. I decided part-way through, however, that this might be the best time to jot down some of the more nitty-gritty details (about how academia operates, planning timelines, classroom management, curriculum, etc.), and as a result, it's turned into a short novel. I hope other new educators might find some of these details helpful!* 
+*I had initially intended for this to be a short, high-level reflection of what it was like to build and teach a new (to me) grad-level course. I decided part-way through, however, that this might be the best time to jot down some of the more nitty-gritty details (planning timelines, pedagogy, classroom management, curriculum, etc.), and as a result, it's turned into a short novel. I hope other new educators might find some of these details helpful!* 
 
 *I'm eternally grateful to the many colleagues, educators, and online strangers who have taken the time to share their own experiences, advice, and materials -- the open data science community is a real gem, and I'm so lucky to be a part of it.*
 :::
@@ -95,8 +95,10 @@ Some action items needed to be addressed in advance of even beginning to plan th
 
 - **April 2023:** Submitted my application for [Teaching Positions, Bren School of Environmental Science & Management](https://recruit.ap.ucsb.edu/JPF02448) -- this is a general call for [Unit 18 Faculty](https://ap.ucsb.edu/policies.and.procedures/red.binder/sections/%5B2_01%5D%20Unit%2018%20Faculty%20and%20Supervisor%20of%20Teacher%20Education%20Series.pdf) (often referred to as Lecturers). Applications require a cover letter, CV, Teaching Statement, and three references. You are asked to specify which course(s) you are interested in teaching.
 - **June 2023:** Interviewed -- this hour-long interview began with a 10min teaching demo followed by ~10min of Q&A. Your demo must be related to the topic area of the course you're intending to teach (i.e. in my case, it needed to be about data viz). I chose to do a live coding demo, since my vision for EDS 240 would involve a lot of that (see [Nederbragt et al. (2020)](tps://doi.org/10.1371/journal.pcbi.1008090) for more on this teaching technique).
-- **September 2023:** Signed my contract. After negotiations, I ended up at 50% time in my typical full-time role (Data Training Coordinator, more formally classified as Academic Coordinator I), 33% time as Unit 18 Lecturer, and 17% time for curriculum development. It's important to note that these appointments are for the quarter in which the course is taught *only* (e.g. winter quarter, Jan - Mar 2024). The lecturer salary scale is higher than than my current full-time salary, so this split appointment meant I would earn a bit more during winter quarter.
+- **September 2023:** Signed my contract. After negotiations, I ended up at 50% time in my typical full-time role (Data Training Coordinator, more formally classified as Academic Coordinator I), 33% time as Unit 18 Lecturer, and 17% time for curriculum development. It's important to note that these appointments are for the quarter in which the course is taught *only* (e.g. winter quarter, Jan - Mar 2024). The lecturer salary scale is higher than than my current full-time salary, so this split appointment meant I would earn a bit more during winter quarter. Once signed, I got started working on the course syllabus.
+
 - **October - November 2023:** While my appointment didn't officially start until January, I spent about 30-40hrs/week prepping for the class during fall quarter (which is a lot of time...this is not an attempt to applaud "the grind," but rather reflect how this experience played out for me). I focused primarily on the syllabus, grading structure, drafting high-level outlines of weekly topics, building the skeleton of the course website, and learning other necessary classroom management tools (I'll elaborate more on all of these in the next sections). I was able to prep ~2 of 4 homework assignments (plus jot down ideas for others), and even a couple early lectures. I also spent ~30hrs/week teaching my typical fall workshops, reviewing / updating materials for [EDS 430: Intro to Shiny](https://ucsb-meds.github.io/EDS-430-Intro-to-Shiny/) (a 2-day short course that I also teach in winter quarter), and other MEDS administrative stuff.
+
 - **December 2023:** Oof, this was definitely the hardest month out of the whole experience -- while most folks were winding down after a busy fall quarter, I felt like I had to ramp up (more so than I already had been). I was also tired from a stacked fall and wanted so desperately for a break that I felt like I couldn't really take. I was also coming to terms with the fact I would absolutely not have the whole course planned / materials created ahead of the January 8th start date ({{< fa face-grin-beam-sweat title="a grinning face with a drop of sweat dripping from it's brow" >}} yes, that was incredibly naive thinking on my part). I *did* hope to have materials / plans for the first 6 weeks of the quarter largely created -- I had a number of other non-EDS 240 events, teaching, and responsibilities during this first half of the quarter and I was genuinely worried about not having enough time to do it all.
 
 - **January - March 2023:** Here we go! By this point, I had weeks 1-4 fully planned, weeks 5-6 outlined(ish), and weeks 7-10 were largely untouched (aside from having scheduled [Allison Horst](https://github.com/allisonhorst/)'s guest lecture on using Observable JS to create interactive viz during week 9!). I tried my best to work ahead and continue prepping future lectures / assignments / etc. but this wasn't totally sustainable. By ~week 5, I was prepping each lecture the week before delivering it. That said, I had compiled so many resources and jotted down so many random ideas as I came across things, so creating new lectures did get a bit easier as time went on.
@@ -171,7 +173,9 @@ Some students were understandably uncertain about the specs grading + token syst
 
 >[*"I can’t quite put my finger on it, but the tone of the course just really feels like it promotes easy learning. The expectations are certainly high, but are given in a way that allows room for growth at everyone’s particular pace. Even though I feel like I’m spending the same amount of time on this course as others, it doesn’t feel nearly as stressful. It might have to do with the grading. I really enjoy not having my performance pinned to a letter or number grade that can artificially inflate the stakes."*]{.small-text}
 
->[*"I was a bit intimidated by the token system but I did open up to it especially with extensions and resubmissions."*]{.small-text}
+>[*"...As for the tokens and grading system, it was nice to be very clear on what was needed to succeed in the class and be able to decide where to spend tokens as needed at tough parts of the quarter."*]{.small-text}
+
+<!-- >[*"I was a bit intimidated by the token system but I did open up to it especially with extensions and resubmissions."*]{.small-text} -->
 
 From my (an instructor's) perspective, this grading system was really wonderful for a number of reasons:
 
@@ -188,7 +192,7 @@ While I did spend a lot of time providing detailed constructive feedback on assi
 
 <br>
 
-Maybe you're thinking, "this seems like a lot to keep track of..." and to be fair, it sort of is. But **a nicely organized Google Sheet helped tremendously in my efforts to keep track of attendance, tokens earned / used, and completed assignments**. Students were required to fill out a [Google form](https://docs.google.com/forms/d/e/1FAIpQLSdOP32K7_A3zzENvYQvIBCnLveaLE-exnFlqDV1xBWz66rWoA/viewform) (also adopted from Drs. Fiola & Symons' BIO SCI E106 Lec A syllabus) when redeeming tokens, which acted as an "official record" (I did end up making lots of notes in my Google sheet when students used tokens, since this proved to be an easier place for me to reference).
+Maybe you're thinking, "this seems like a lot to keep track of..." and to be fair, it sort of is. But **a nicely organized Google Sheet helped tremendously in my efforts to keep track of attendance, tokens earned / used, and completed assignments**. Students were required to fill out a [Google form](https://docs.google.com/forms/d/e/1FAIpQLSdOP32K7_A3zzENvYQvIBCnLveaLE-exnFlqDV1xBWz66rWoA/viewform) (also adapted from Drs. Fiola & Symons' BIO SCI E106 Lec A syllabus) when redeeming tokens, which acted as an "official record" (I did end up making lots of notes in my Google sheet when students used tokens, since this proved to be an easier place for me to reference).
 
 <div class="dark-green-bg center-text large-text">{{< fa file-excel title="an excel file" >}} Google Sheets to the rescue! I was able to keep grades and tokens organized with this [grade tracker (template)](https://docs.google.com/spreadsheets/d/1Avqldk7X_wPrcAgWBd0L9RHSaWmBwIejvj2ZcKrACNU/edit?usp=sharing){target="_blank"}.</div>
 
@@ -304,7 +308,7 @@ A major challenge when teaching technical skills (e.g. coding) is assisting stud
 **Sevan also taught weekly discussion sections and took lead on planning much of the content and activities.** They went something like this:
 
 - **Weeks 1-4:** I had extra content that I ended up having to cut from lecture, but felt was important for students to think about / get some additional practice on (data wrangling and ggplot practice, writing alt text, intro to customizing ggplot themes). We shuttled this content to discussion section for Sevan to cover.
-- **Weeks 5-9:** These weeks were a mix of introducing additional chart types that hadn't been covered in lecture, and importantly, having students share in-progress data viz (part of their final course assignment) and receiving constructive feedback from peers.
+- **Weeks 5-9:** These weeks were a mix of introducing additional chart types that hadn't been covered in lecture, and importantly, having students share in-progress data viz (part of their final course assignment) to receive constructive feedback from peers.
 - **Week 10:** Students presented their final projects!
 
 #### Grading
@@ -320,53 +324,67 @@ There's so much more that I learned along the way, but that didn't quite fit und
 I already mentioned a fair number of tools that made teaching this course possible (R/RStudio, git/GitHub, GitHub Classrooms, Google Sheets & Forms, Quarto), but there are a few more that are worth noting:
 
 - The MEDS program uses **[Slack](https://slack.com/)** for internal staff / instructor communications, and also for instructor / student communications. Each course has its own dedicated channel (e.g. **#eds-240-data-viz**) where instructors can share updates, resources, and answer student questions. 
+
 - UCSB recently made the switch to **[Canvas LMS](https://www.instructure.com/canvas)** as their default online learning platform -- some instructors use this to host course materials, share assignment grades, administer quizzes, etc. I thought I might use it to share grades with students throughout the quarter, but given the Satisfactory / Not Yet nature of assignment grades, it was easier just to communicate that information either via direct messages on Slack or as GitHub issues (on private repos).
+
 - Instructors will eventually need to submit final grades -- UCSB uses a web application called **EGrades**, though I imagine this will differ by institution. Making note of it here, because you'll want to confirm that you both have access to whatever system your university uses and also understand how to use it (this was my first time, so I had a bit of learning to do!). 
 
+### Some things that worked well 
 
-### Things that worked well 
+- **Specs grading!** -- I would absolutely implement it again (for this course, and / or others). While it does require more work up from (e.g. building clear assignment rubrics, determining exactly what a student needs to do to earn a particular grade in the course), I really do think it allowed me to focus on the more fun (and important) parts of teaching (e.g. providing feedback on assignments, soliciting and acting on student feedback throughout the course) 
 
-- students like being able to work on final project from the get go (find quotes)
-- keep all the cool resources that you use and those that you don't!
-- So, would I implement specs grading again (in this course and / or others)? ABSOLUTELY! While it does require more work up front (e.g. building clear assignment rubrics, determining exactly what a student needs to do to earn a particular grade)
-- self-reflections / goal setting is important and appreciated
-- follow up with students when they have questions!
+- **Providing the dates that each homework would be assigned and due in the syllabus (and on day 1 of class),** which helped everyone plan out their quarters. Students were juggling two other courses, plus work on their capstones (along with any other jobs, personal matters, life). 
 
-### Things to improve
+- **[Pre-](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR1-precourse.html), [mid-](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR2-midcourse.html), and [end-of-course](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR3-endcourse.html) self reflections** were such a great way for me to learn about students (on a professional and personal level) *and importantly*, encouraged them to both set their own learning goals and check in on their progress towards those goals throughout the quarter. Sending so much appreciation to [An Bui](https://an-bui.com/), who originally crafted these reflections for her [environmental stats course](https://an-bui.com/teaching/02_envs-193ds/).
 
-- need to streamline HWs
-- 3 hrs is long (for students)
-- too much content (i always overestimate)
-- make more time to run through materials (you forget stuff that you made a while ago)
-- create qmd templates -- live coding is great, but coding every single thing takes a lot of time; it's a balance of getting that practice while also getting through enough material; having some code pre-written in templates might be the way to go next year
-- refine specifications
+- **Spreading out work for the [final assignment](https://samanthacsik.github.io/EDS-240-data-viz/assignments/HW4.html) across the entire quarter** allowed for *lots* of feedback (from myself, Sevan, and peers). It also provided more time for students to think deeply about their data, pivot if necessary, and experiment with different graphic forms, design approaches, etc. A few student quotes in response to the question, *What is one thing that you really liked about this course, and why?* (from the [end-of-course self reflection](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR3-endcourse.html)):
 
-### Self-reflecting
+>[*"I really liked how the project was scaled. It was super useful to start working on homework 4 in the first couple of weeks because by the time that we were ready to really turn something in we had become very familiar with it."*]{.small-text}
 
-- there's no such thing as part time lecturering, at least for your first year teaching a course. Most other responsibilities had to be put on hold, and I was working ~80hr weeks throughout winter quarter
-- teaching is a way more vulnerable act / job than I think I realized
-- you're going to get a lot of feedback -- that's great, and some is super helpful. But it's important to remind yourself that you've thougth *really* hard about each choice you've made and it's okay to not incorporate feedback
-- recognize that burnout is real
+>[*"I really liked how often we showed off our visualizations to the class and the instructors and how the homework assignments built on each other. There were plenty of opportunities for feedback and implementation of that. In most courses, it feels like you submit an assignment, receive feedback, and then don’t touch it again."*]{.small-text}
+
+>[*"I really enjoyed the way that discussion section was structured. In the first half of the quarter, when we were still learning the basics it was very helpful to learn new/go over concepts in the discussion format. And then, when we started sharing our own visualizations and giving feedback I found that super helpful to understand what did or did not work for an audience unfamiliar with my dataset. It really helped me refine my plots for HW 4"*]{.small-text}
+
+<!-- >[*"I thoroughly enjoyed how much feedback we got on assignments. In other courses, feedback is very minimal but in this course, the feedback was more tangible. I feel like I greatly improved on my dataviz skills because of the feedback"*]{.small-text} -->
+
+- **Saving all the awesome resources** that I came across while building lectures, and adding them to the [course website](https://samanthacsik.github.io/EDS-240-data-viz/resources.html) -- I was motivated by slightly selfish reasons (I didn't want to lose track of the bazillion tabs I had open at any given time), but it was also a great place to point students to when they were looking for a place to start or resources on a particular topic.
+
+- **Asking students to complete anonymous [short surveys](https://samanthacsik.github.io/EDS-240-data-viz/assignments.html#end-of-class-surveys) at the end of each class**, which were an easy way for me to quickly assess areas of confusion and seek feedback while things were fresh in everyone's minds (completing these also counted towards their course grade). I tried my best to address recurring points of confusion by following up with further explanations and resources in the class Slack channel. Survey questions were as follows:
+  - [Pacing was ___ (multiple choice: too fast, too slow, just right)]{.small-text}
+  - [Today, I felt ___ (multiple choice: engaged / focused / excited, disengaged / distracted / not very excited, neutral / somewhere in the middle)]{.small-text}
+  - [One thing I feel that I have a good understanding of now is ___ (short answer)]{.small-text}
+  - [One thing I need more practice with to feel comfortable is ___ (short answer)]{.small-text}
+  - [Anything you want us (Sam & TA) to know about your current learning situation? (optional; short answer)]{.small-text}
+
+### Some things to improve
+
+- **Shorten lecture, or introduce more frequent or longer breaks.** I received a number of comments from student in their self reflections that it was often difficult to maintain focus towards the end of our 3 hour-long weekly lecture. I'm a bit reluctant to switch to shorter lectures that meet twice weekly *just yet*, because from a teaching perspective, the single longer meeting time offers a couple important benefits: (a) it affords me the time to present conceptual content, then demonstrate how to apply it in our coding practice immediately afterwards, (b) as soon as I finished my weekly lecture, I could turn my attention to prepping for the following week (this was particularly helpful this first year, while I was in a constant state of curriculum development). I do see a path where I keep the 3hrs 1x/week schedule by adding in more breaks and streamlining lecture material (see below).
+
+- **Streamline / cut lecture content.** I *almost always* overestimate how much content I can fit into any given time period, especially when live-coding / technical instruction is involved -- inevitably, there are lots of (great) questions and troubleshooting, and my overzealousness leads to more content than is reasonable. By carefully considering what content to trim and / or rearrange, I'm hopeful I can introduce more frequent or longer breaks.
+
+- **Create template scripts / .qmd files for students to code along in.** Each student [created their own GitHub repository](https://samanthacsik.github.io/EDS-240-data-viz/course-materials/week1.html#create-your-eds-240-class-examples-repository) to house all the code we'd write together throughout the quarter. Overall, I loved this setup -- it kept the collective EDS 240 materials organized in one place and was an opportunity to practice repository management and version control. Next time, I'd love to provide template .qmd files with YAMLs and section headers (and maybe even some starter code for particular exercises) already filled out -- I think this would help a bit with time management (it takes a bit of time to set these up together) and also help us all stay organized as we move from exercise to exercise throughout class.
+
+- **Move some data wrangling to pre-class prep.** Year after year, students have requested more in-class data wrangling practice across all courses. I started the quarter off by live-coding my way through all data wrangling (ahead of our in-class data viz practice), but it ultimately took up a lot of really valuable time that I preferred to spend on data viz itself. One student eventually suggested that I provide the wrangling code ahead of time, require students to review it on their own as part of their pre-class prep activities, then reserve ~10min for answering any questions in class. This seemed to work quite well, and I'm excited to try it out a bit more next year. I'll likely still plan to do a bit of in-class wrangling at the start of the quarter, or if there are particularly new methods that I'd like to introduce.
+
+- **Allow myself more time to review materials ahead of each class.** This one may seem a bit silly, but it's an important reminder for my future self! I had built a lot of content before the course began, and I spent most "down time" throughout the quarter trying to prep ahead. This meant that I'd often only start reviewing lecture materials the Sunday evening before teaching on Monday...each Sunday, I'd tell myself that it was plenty of time, and each Sunday I'd realize that it most certainly was not. I stressed a lot about relearning the content, fixing code errors that I hadn't caught when I first built the materials, and frantically looking for more resources to better understand things ahead of questions I thought might come up in class. I *am* totally hopeful that this will get easier each time I teach the course, but did want to note this as an important consideration for anyone who may be teaching something for the first time.
+
+### Some final thoughts on teaching, more generally
+
+- **Teaching *anything* requires sooo much learning, both on the subject matter side and *importantly* on the pedagogical side.** I knew that I'd be spending a whole lot of time diving into the (overwhelmingly massive) field of data viz, but the sheer amount of time I spent figuring out exactly *how* I would lead this course caught me by surprise. I'm honestly really proud of how it all turned out, and I credit that largely to the initial pedagogical planning (please also find the names of those who helped me on this journey in the next section!).
+
+- **Teaching is a really vulnerable act!** No matter how much prep you do, you'll get asked questions that you don't know the answers to, be confronted with situations you don't quite know how to navigate, and likely make (many) mistakes. I prepped *so* much, in part because I was scared of making any mistakes (which I of course made anyway). This quarter was a great reminder that transparency is key, and that more often than not, students are really understanding. Taking a bit time to respond to any outstanding questions in the class Slack channel, or explaining the reasoning behind policy decisions goes a long way.
+
+- **You're going to get *a lot* of feedback.** Some of it will certainly help to improve your course / teaching. But it's also okay to consider, then ignore feedback too. Ultimately, we are tasked with thinking *really* long and hard about what topics to teach, how to teach them, course policies, etc. and we make deliberate decisions in our planning. It's okay to stand by those decisions. While not teaching-specific, I really appreciated Dorie Clark's piece on [When it's OK to Ignore Feedback](https://hbr.org/2015/08/when-its-ok-to-ignore-feedback) (Harvard Business Review). 
+
+- **Burnout is real. Find ways to take care of yourself.** There was a point around week 7 where I wanted to think about anything other than putting together my next lecture. The remaining topics really excited me, but I was *struggling mightily* to focus. I stressed for a while about it, but eventually found myself some grace. I spent a couple days working on a completely unrelated project, walked my dog in the middle of the work day, took slightly longer lunch breaks, and maintained my typical workout schedule. It was a much needed change of pace that helped me find my groove again.
 
 ## It takes a village
 
-Educators who openly share their work: 
-- [Meghan Hall](https://meghan.rbind.io/) [CMU 36-315: Statistical Graphics & Visualization](https://cmu-36315.netlify.app/)
-- [Andrew Heiss](https://www.andrewheiss.com/) [PMAP 8101: Data Visualization with R](https://datavizs23.classes.andrewheiss.com/)
-- All things [Cédric Scherer](), but especially his [Graphic Designs with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/) workshop from rstudio::conf(2022) 
+This may (definitely) be sappy, but I truly would not be where I am or doing what I'm doing without the support of incredible friends, colleagues, and the online data science community. You all make learning such a joy and I am truly grateful to have so many brilliant educators and thinkers to look up to. There are too many names to list here, but I do want to give shout outs to a few folks who made getting started on this class a bit less intimidating:
 
-Friends / colleagues who think a lot about educational pedagogy and are absolutely changing the field
-- An Bui (self-reflections)
-- Nate Emery (alternative grading)
-- Ruth Oliver 
+Figuring out where to start is often the hardest part, and finding inspiration from educators who openly shared their materials online was a true blessing. Many many thanks to **[Meghan Hall](https://meghan.rbind.io/)** and **[Andrew Heiss](https://www.andrewheiss.com/)**, whose courses ([CMU 36-315: Statistical Graphics & Visualization](https://cmu-36315.netlify.app/) & [PMAP 8101: Data Visualization with R](https://datavizs23.classes.andrewheiss.com/)) provided some much needed inspiration and helped me find my feet. I reference a whole lot of work by **[Cédric Scherer](https://www.cedricscherer.com/)**, but was especially grateful to come across his jam-packed 2-day workshop, [Graphic Designs with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/) from rstudio::conf(2022). 
 
-Instructors who inspire:
-Allison Horst
+Teaching is truly an art, and I'm lucky to be surrounded by folks who think really hard about how to do it well. Thank you to **[Nate Emery](http://nathanemery.com/)**, who first introduced me to the concept of alternative grading and gave me the resources and encouragement to give it a try myself. To my colleague, dear friend, and biggest hype woman, **[An Bui](https://an-bui.com/)**, who is both a brilliant data scientist and deeply intentional educator. Adopting her student self-reflection exercises was one of my favorite parts of this course. And of course to, **[Allison Horst](https://allisonhorst.github.io/)** who has a gift like no other -- her approach to teaching has inspired me since my earliest days as a budding data scientist and educator. Find her [artwork](https://allisonhorst.com/) adorning nearly every page of the course website. 
 
-Friends that encourage you to share out: 
-Julie Lowndes
-
-Keep me sane: 
-Brendan Shanny
-
+And finally, thank you to **[Julie Lowndes](https://jules32.github.io/)**, for being one of my greatest role models in the open data science movement, and for always encouraging me to share my experiences through writing.
 
