fixed a few typos in latest blog post

--- a/posts/2024-04-02-data-viz-course/index.qmd
+++ b/posts/2024-04-02-data-viz-course/index.qmd
@@ -119,7 +119,7 @@ I'll walk through each of these in a bit more detail, then wrap up with some thi
 
 ### 1. Build the course syllabus{#syllabus}
 
-This was probably the most intimidating part, given that it's the one place to comprehensively describe all aspects of course proceedings -- from (tentative) topics covered to assignment due dates, and grading schemes to course policies. **I chose to begin with defining the course's learning objectives, i.e. what I wanted all students to feel comfortable with and be able to execute on by the end of the course.** It was really important to me that I blended both technical skills (e.g. using `{ggplot2}`) with information design theory and a solid conceptual understanding of what makes a good data visualization (i.e. transferable knowledge, regardless of the programming language / data viz tool of choice).
+This was probably the most intimidating part, given that it's the one place to comprehensively describe all aspects of course proceedings -- from (tentative) topics covered to assignment due dates, and grading schemes to course policies. **I chose to begin with defining the course's learning objectives, i.e. what I wanted all students to feel comfortable with and be able to execute on by the end of the course.** It was really important to me that I blended technical skills (e.g. using `{ggplot2}`) with information design theory and a solid conceptual understanding of what makes a good data visualization (i.e. transferable knowledge, regardless of the programming language / data viz tool of choice).
 
 After a lot of iterating, seeking feedback from a mix of past MEDS students (now NCEAS data scientists) and other NCEAS educators, I ended up with a list of six learning objectives (check out the [syllabus](https://docs.google.com/document/d/1iv-bsakUA-7FDSZCt0Qq1TUYXBzq0cktzLlxV2AxhZc/edit#heading=h.thw5uolxraye) to see what they are!). **Next, I began mapping out tentative topics by date**, being mindful of holidays (no lectures during weeks 2 & 7), large non-EDS 240 deadlines (e.g. [MEDS Capstone](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/meds-capstone-projects) faculty reviews), and the skills we'd need to cover ahead of distributing each new homework assignment. This schedule was a detailed draft at best -- topics were shifted around a bit or dropped entirely leading up to the start of the quarter and even during the quarter (once I had a better understanding of how much I could realistically cover in a given class).
 
@@ -362,7 +362,7 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 ### Some things to improve
 
-- **Shorten lecture, or introduce more frequent or longer breaks.** I received a number of comments from student in their self reflections that it was often difficult to maintain focus towards the end of our 3 hour-long weekly lecture. I'm a bit reluctant to switch to shorter lectures that meet twice weekly *just yet*, because from a teaching perspective, the single longer meeting time offers a couple important benefits: (a) it affords me the time to present conceptual content, then demonstrate how to apply it in our coding practice immediately afterwards, (b) as soon as I finished my weekly lecture, I could turn my attention to prepping for the following week (this was particularly helpful this first year, while I was in a constant state of curriculum development). I do see a path where I keep the 3hrs 1x/week schedule by adding in more breaks and streamlining lecture material (see below).
+- **Shorten lecture, or introduce more frequent or longer breaks.** I received a number of comments from students in their self reflections that it was often difficult to maintain focus towards the end of our 3 hour-long weekly lecture. I'm a bit reluctant to switch to shorter lectures that meet twice weekly *just yet*, because from a teaching perspective, the single longer meeting time offers a couple important benefits: (a) it affords me the time to present conceptual content, then demonstrate how to apply it in our coding practice immediately afterwards, (b) as soon as I finished my weekly lecture, I could turn my attention to prepping for the following week (this was particularly helpful this first year, while I was in a constant state of curriculum development). I do see a path where I keep the 3hrs 1x/week schedule by adding in more breaks and streamlining lecture material (see below).
 
 - **Streamline / cut lecture content.** I *almost always* overestimate how much content I can fit into any given time period, especially when live-coding / technical instruction is involved -- inevitably, there are lots of (great) questions and troubleshooting, and my overzealousness leads to more content than is reasonable. By carefully considering what content to trim and / or rearrange, I'm hopeful I can introduce more frequent or longer breaks.
 
